--- a/tests/cnt-css-fonts_ot/EPUB/nav.xhtml
+++ b/tests/cnt-css-fonts_ot/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>CSS support for font resources</title>
+    <title>CSS support for font resource in OpenType format</title>
   </head>
   <body>
     <nav epub:type="toc">
