--- a/contributing.html
+++ b/contributing.html
@@ -82,12 +82,12 @@
 <body>
     <section id="abstract">
         <p>
-            This document provides information on how to write EPUB 3.3 tests, as well as how to run the tests in a reading system and producing an implementation report.
+            This document provides information on how to write EPUB 3 tests, as well as how to run the tests in a reading system and producing an implementation report.
     </section>
     <section id="sotd">
     </section>
 
-    <div data-include="contributing.md" data-include-format="markdown" data-include-replace="true"></div>
+    <div data-include="CONTRIBUTING.md" data-include-format="markdown" data-include-replace="true"></div>
 
 </body>
 </html>
