Update CONTRIBUTING.md link in contributing.html

--- a/contributing.html
+++ b/contributing.html
@@ -87,7 +87,7 @@
     <section id="sotd">
     </section>
 
-    <div data-include="https://w3c.github.io/epub-tests/CONTRIBUTING.md" data-include-format="markdown" data-include-replace="true"></div>
+    <div data-include="./CONTRIBUTING.md" data-include-format="markdown" data-include-replace="true"></div>
 
 </body>
 </html>
