Handled the visibility button issue

--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
 			</p>
 		</section>
 
+		<div id="button_container">
+			<button id="should_may_visibility" type="button">switch visibility</button>
+		</div>
+
 		<section data-include="generate/fragments/tests.html" data-include-replace="true"></section>
 		<section class="appendix" id="contributors">
 			<h2>Acknowledgements</h2>
