--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 				latestVersion: "https://w3c.github.io/epub-tests/",
 				specStatus: "base",
 				noRecTrack: true,
+                publishDate: "2025-11-20",
 				shortName: "epub-tests",
 				edDraftURI: "https://w3c.github.io/epub-tests/",
                 copyrightStart: "2021",
