--- a/results.html
+++ b/results.html
@@ -129,6 +129,7 @@
 				latestVersion: "https://w3c.github.io/epub-tests/results",
 				specStatus: "base",
 				noRecTrack: true,
+                publishDate: "2025-11-20",
 				shortName: "epub-tests-results",
 				edDraftURI: "https://w3c.github.io/epub-tests/results",
                 copyrightStart: "2021",
