Added a flag to display deprecated tests

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			}
 
             tr.deprecated td:nth-child(2)::after {
-                content: " (Feature is deprecated.)"
+                content: " (Test is deprecated.)"
 
             }
 
